# RagQA

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  setup_aws.sh
src/revival/: __main__.py  config.py  models.py  server.py
src/revival/routers/: batch.py  documents.py  health.py  query.py
src/revival/services/: batch_upload.py  chunker.py  embeddings.py  pdf_parser.py  rag.py  s3.py  vector_store.py
src/revival/static/: demo.html  index.html  widget.js
