[project]
name = "revival"
version = "0.1.0"
description = "RAG Document Q&A — upload PDFs, ask questions, get answers with source citations"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.95.0",
    "voyageai>=0.3.0",
    "faiss-cpu>=1.9.0",
    "pymupdf>=1.25.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "pydantic-settings>=2.7.0",
    "boto3>=1.35.0",
    "python-multipart>=0.0.18",
    "numpy>=2.0.0",
]

[project.scripts]
revival = "revival.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/revival"]

[tool.ruff]
target-version = "py312"
line-length = 100
